Update dispatching patient

--- a/src/main/resources/templates/patient-list.html
+++ b/src/main/resources/templates/patient-list.html
@@ -41,6 +41,7 @@
         <table class="table table-bordered">
             <thead>
             <tr>
+                <th>PatientId</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Height</th>
