Design mapping model completely

--- a/src/main/resources/templates/patient-list.html
+++ b/src/main/resources/templates/patient-list.html
@@ -46,7 +46,7 @@
                 <th>Last Name</th>
                 <th>Height</th>
                 <th>Weight</th>
-                <th>Reason see the doctor</th>
+                <th>Symptom</th>
                 <th>Request</th>
                 <th>Admit Time</th>
                 <th>Employee Managing Id</th>
@@ -59,7 +59,7 @@
                 <td><span th:text="${patient.lastName}"></span></td>
                 <td><span th:text="${patient.height}"></span></td>
                 <td><span th:text="${patient.weight}"></span></td>
-                <td><span th:text="${patient.reasonSeeTheDoctor}"></span></td>
+                <td><span th:text="${patient.symptom}"></span></td>
                 <td><span th:text="${patient.request}"></span></td>
                 <td><span th:text="${patient.admitTime}"></span></td>
                 <td><span th:text="${patient.employeeId}"></span></td>
