--- a/src/main/resources/templates/patient-list.html
+++ b/src/main/resources/templates/patient-list.html
@@ -120,7 +120,7 @@
 
                                 // Attach click event listener to the Delete button
                                 deleteButton.addEventListener("click", function () {
-                                    deletePatientOnServer(row, patient);
+                                    confirmDelete(row, patient);
                                 });
 
                                 actionsCell.appendChild(deleteButton);
@@ -145,15 +145,21 @@
                             $('#searchInput').on('input', filterPatientsByName);
                         }
 
-                        function deletePatientOnServer(row, patientList) {
-                            console.log('Deleting patient:', patientList);
+                        function confirmDelete(row, patient) {
+                            if (confirm('Are you sure you want to delete this patient?')) {
+                                deletePatientOnServer(row, patient);
+                            }
+                        }
 
-                            fetch('/patient-list', {
+
+                        function deletePatientOnServer(row, patient) {
+                            console.log('Deleting patient:', patient);
+
+                            fetch(`http://localhost:8090/admin/update/patient-list/${patient.patientId}`, {
                                 method: 'DELETE',
                                 headers: {
                                     'Content-Type': 'application/json'
                                 },
-                                body: JSON.stringify(patientList)
                             })
                                 .then(response => {
                                     console.log('Response:', response);
