--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -177,7 +177,7 @@
         padding: 20px 10px;
         color: #fff;
         text-decoration: none;
-        text-shadow: 0px 0px 8px #003366;
+        text-shadow: 0px 0px 8px #7875B5;
     }
 
     .social-login__icon:hover {
@@ -241,7 +241,7 @@
             try {
                 alert("Đang kiểm tra thông tin, vui lòng chờ...");
 
-                var response = await fetch("YOUR_LOGIN_API_ENDPOINT", {
+                var response = await fetch("http://localhost:8090/admin/update/login", {
                     method: "POST",
                     headers: headers,
                 });
@@ -256,7 +256,7 @@
                 alert("Đã xảy ra lỗi. Vui lòng thử lại sau.");
             }
         });
-    });
+    });        
 </script>
 </body>
 </html>
