fix mini mistake

--- a/src/main/resources/templates/user-menu.html
+++ b/src/main/resources/templates/user-menu.html
@@ -20,7 +20,7 @@
             ul li:nth-child(6n+3) a:before { background: #4C0099; }
             ul li:nth-child(6n+4) a:before { background: #FF99FF; } 
             ul li:nth-child(6n+5) a:before { background: #FFE5CC; } 
-            ul li:nth-child(6n+6) a:before { background: #009999; }  006666
+            ul li:nth-child(6n+6) a:before { background: #009999; }
     </style>
     </head> <body>     <ul>
     <li><a href="http://localhost:8090/homepage.html" data-text="Home">Home</a></li>
