change position of add new button

--- a/src/main/resources/templates/patient-list.html
+++ b/src/main/resources/templates/patient-list.html
@@ -45,14 +45,14 @@
             justify-content: center;
 
             position: relative;
-            top: 10px; /* Vị trí từ trên xuống */
-            left: 20px; /* Vị trí từ trái sang phải */
+            top: 10px;
+            left: 20px;
         }
         .add-new{
-            width: 160px; 
-            height: 60px; 
+            width: 120px;
+            height: 50px;
             padding: 15px;
-            font-size: 24px; 
+            font-size: 18px;
             background-color: #003366; 
             color: #FFE5CC !important; 
             border: none; 
@@ -61,8 +61,8 @@
             justify-content: center;
             
             position: relative;
-            top: 100px; /* Vị trí từ trên xuống */
-            left: 200px; /* Vị trí từ trái sang phải */
+            top: 100px;
+            left: 60px;
         }
 
     </style>
